Spring Zuul support dropped, Spring Web rolled back dependencies, URITemplate updated to latest, simplified conditional resource building